--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb+srv://elderick:fullstack@phonebook-yajra.mongodb.net/phonebook?retryWrites=true&w=majority
+MONGODB_URI=mongodb://elderick:fullstack@fullstack-shard-00-00-yajra.gcp.mongodb.net:27017,fullstack-shard-00-01-yajra.gcp.mongodb.net:27017,fullstack-shard-00-02-yajra.gcp.mongodb.net:27017/phonebook?ssl=true&replicaSet=Fullstack-shard-0&authSource=admin&retryWrites=true&w=majority
 PORT=3001
